# kwin-script-workflow

./: CMakeLists.txt  ChangeLog  README.md
package/: CMakeLists.txt  ChangeLog  README  metadata.desktop  metadata.desktop.cmake
package/contents/ui/: Activities2.qml  ActivityAnimationMainView.qml  AllActivitiesTasks.qml  DynamicAnimations.js  MainAddActivityButton.qml  Settings.qml  StoppedActivitiesPanel.qml  TaskAnimationMainView.qml  TitleMainView.qml
package/contents/ui/components/: DraggingMouseArea.qml  IconButton.qml
package/contents/ui/connections/: KWinConnections.qml  QMLPluginsConnections.qml
package/contents/ui/delegates/: ActivityDeleg.qml  ActivityStoppedDeleg.qml  ScrolledTaskPreviewDeleg.qml  TaskPreviewDeleg.qml  WorkAreaDeleg.qml  WorkAreaTaskDeleg.qml
package/contents/ui/delegates/ui-elements/: ActivityBtns.qml  TaskPreviewButtons.qml  WATaskDelegButtons.qml  WindowButton.qml
package/contents/ui/helptour/: TourDialog.qml
package/contents/ui/interfaces/: DraggingInterfaceTasks.qml  KeyNavigation.qml
package/contents/ui/ui/: AboutDialogTmpl.qml  CalibrationDialogTmpl.qml  CloningDialogTmpl.qml  ConfigurationDialogTmpl.qml  DesktopDialogTmpl.qml  DialogTemplate2.qml  FirstRunCalibrationTmpl.qml  FirstRunHelpTourTmpl.qml  RemoveDialogTmpl.qml  UIConnections.qml
package/contents/ui/views/: View1.qml
po/: CMakeLists.txt
